sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/Contract_Table_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>LEM-15402, It is being used for the mapping of Contract table.</description>
    <label>Contract Table Mapping</label>
    <pluralLabel>Contract Table Mappings</pluralLabel>
</CustomObject>