sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>This is used to track API name of the field.</description>
    <label>API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>