sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/Applicable_for_Product__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_Product__c</fullName>
    <description>LEM-14993: This is used to track split category of products.</description>
    <label>Applicable for Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
                <default>true</default>
                <label>Core</label>
            </value>
            <value>
                <fullName>A&amp;P</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>