sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/Available_On__c.field-meta.xml
<CustomField>
    <fullName>Available_On__c</fullName>
    <description>This identifies on which Sobject data should be visible</description>
    <label>Available On</label>
    <type>TextArea</type>
</CustomField>