sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/Hyper_Link_Display_Field__c.field-meta.xml
<CustomField>
    <fullName>Hyper_Link_Display_Field__c</fullName>
    <label>Hyper Link Display Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>