sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>It is used to track the order of the field which will be represented in the table.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>