sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
                <default>true</default>
                <label>Enterprise</label>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>