sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/validationRules/Validate_Available_On_Field_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Available_On_Field_Value</fullName>
    <active>true</active>
    <description>LEM-19696: It is used to display the validation message when the &quot;Available On&apos;&quot;is blank for &apos;Contract&apos; object and not blank for non-contract object.</description>
    <errorConditionFormula>OR(
  AND(
    ISBLANK(Available_On__c),
    Text(Object__c) = $Label.Contract_Object
  ),
  AND(
    NOT(ISBLANK(Available_On__c)),
    Text(Object__c) &lt;&gt; $Label.Contract_Object
  )
)</errorConditionFormula>
    <errorDisplayField>Available_On__c</errorDisplayField>
    <errorMessage>Available on required when object selected is Contract.</errorMessage>
</ValidationRule>