sfdx-source/force-app/main/default/objects/Contract_Table_Mapping__mdt/listViews/SMB_All_Details.listView-meta.xml
<ListView>
    <fullName>SMB_All_Details</fullName>
    <columns>Segment__c</columns>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>API_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Hyper_Link_Display_Field__c</columns>
    <columns>Available_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>SMB</value>
    </filters>
    <label>SMB All Details</label>
</ListView>